[project]
name = "dyne"
version = "1.0.5"
description = "A light weight Python async framework with batteries included."
authors = [{ name = "Tabot Kevin", email = "tabot.kevin@gmail.com" }]
dependencies = [
  "starlette>=0.37.2",
  "uvicorn[standard]>=0.29.0",
  "aiofiles>=23.2.1",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
  "jinja2>=3.1.3",
  "rfc3986>=2.0.0",
  "python-multipart>=0.0.9",
  "chardet>=5.2.0",
  "apispec>=1.0.0b1",
  "whitenoise>=6.6.0",
  "docopt>=0.6.2",
  "requests-toolbelt>=1.0.0",
  "graphene>=3.3",
  "itsdangerous>=2.1.2",
  "graphql-server>=3.0.0b7",
  "marshmallow>=3.21.1",
  "flask>=3.0.3",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.29",
  "a2wsgi>=1.10.7",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.1.1",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dyne"]
