[project]
name = "dyne"
version = "2.0.0"
description = "A lightweight async Python web framework with batteries included."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [{ name = "Tabot Kevin", email = "tabot.kevin@gmail.com" }]

dependencies = [
  # Core ASGI / server
  "starlette>=0.37.2",
  "uvicorn[standard]>=0.29.0",
  # Async file handling
  "aiofiles>=23.2.1",
  # Templating & config
  "jinja2>=3.1.3",
  "pyyaml>=6.0.1",
  # HTTP utilities
  "rfc3986>=2.0.0",
  "python-multipart>=0.0.9",
  # Static files & security
  "whitenoise>=6.6.0",
  "itsdangerous>=2.1.2",
  "chardet>=5.2.0",
  "docopt>=0.6.2",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
]

keywords = [
  "web",
  "framework",
  "async",
  "asgi",
  "graphql",
  "strawberry",
  "graphene",
  "pydantic",
  "marshmallow",
  "serialization",
  "plugins",
  "extentions",
]


[project.optional-dependencies]

# GraphQL Engines
graphql = ["graphql-server>=3.0.0b7"]

strawberry = ["strawberry-graphql>=0.287.3"]

graphene = ["graphene>=3.4.3"]

# Serialization Engines
pydantic = ["pydantic>=2.7.0"]

marshmallow = ["marshmallow>=3.21.1"]

openapi = ["apispec>=6.9.0"]

# HTTP client helpers
http = ["requests>=2.31.0", "requests-toolbelt>=1.0.0"]

# OpenAPI with Pydantic
openapi_pydantic = ["dyne[pydantic,openapi,http]"]

# OpenAPI with Marshmallow
openapi_marshmallow = ["dyne[marshmallow,openapi,http]"]

# GraphQL with Strawberry
graphql_strawberry = ["dyne[graphql,strawberry]"]

# GraphQL with Graphene
graphql_graphene = ["dyne[graphql,graphene]"]

# SQLAlchemy with Alchemical
sqlalchemy = ["alchemical>=1.0.2", "aiosqlite>=0.22.1", "greenlet>=3.3.0"]

full = [
  "dyne[graphql,strawberry,graphene,pydantic,marshmallow,openapi,http, sqlalchemy]",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Hatch configuration
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dyne"]


# Rye configuration
[tool.rye]
managed = true

dev-dependencies = [
  "pytest>=8.1.1",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  # Dev-only Testing
  "strawberry-graphql>=0.246.2",
  "sqlalchemy>=2.0.29",
  "pytest-asyncio>=1.3.0",
]


# Pytest defaults
[tool.pytest.ini_options]
addopts = "-ra -q --cov=dyne"
testpaths = ["tests"]
